começo do projeto

--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
     <script src="../projeto_av2_Jordan/js/script.js"></script>
 </head>
 <body>
-    
+    <div class="cards">
+  <!-- Cartão 1 -->
+  <div class="card">
+    <div class="top-line">
+      <span>07:10</span>
+      <span>3ª Série C</span>
+    </div>
+    <div class="subject">
+      PROGRAMAÇÃO MOBILE
+    </div>
+  </div>
+
+  <!-- Cartão 2 -->
+  <div class="card">
+    <div class="top-line">
+      <span>08:00 (2)</span>
+      <span>3ª Série C</span>
+    </div>
+    <div class="subject">
+      PROGRAMAÇÃO MOBILE
+    </div>
+  </div>
+    </div>
 </body>
 </html>
